test/smt2/t158.expected.out
(error "line 5 column 86: invalid quantified expression, syntax error: (forall|exists ((<symbol> <sort>)*) <expr>) expected")
(error "line 6 column 88: invalid command, '(' expected")
unknown
